--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 
 # data base ulr 
 DATABASE_URL="mysql://root:@localhost:3306/newsdailydb"
+
+# cookie helper
+JWT_SECRET="123-XYZ-ABC"
+JWT_ISSUER="Localhost"
+JWT_EXPIRATION_TIME="24h"
+
+HOST="http://localhost:3000"
