--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ JWT_SECRET="123-XYZ-ABC"
 JWT_ISSUER="Localhost"
 JWT_EXPIRATION_TIME="24h"
 
-HOST="http://localhost:3000"
+HOST="https://daily-news-bd.vercel.app"
