--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       },
       {
         "src": "prisma/schema.prisma",
-        "use": "@prisma/cli",
+        "use": "prisma",
         "config": {
           "PRISMA_CLIENT_VERSION": "5.8.1"
         }
