update banner and navbar

--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 
 # data base ulr 
 DATABASE_URL="mysql://root:@localhost:3306/newsdailydb"
+# DATABASE_URL="mysql://avnadmin:AVNS_7GxsPvFKBXJAVQ2rzs8@mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com:24058/defaultdb?ssl-mode=REQUIRED"
+
+USER_NAME=avnadmin
+PASSWORD=AVNS_7GxsPvFKBXJAVQ2rzs8
 
 # cookie helper
 JWT_SECRET="123-XYZ-ABC"
 JWT_ISSUER="Localhost"
 JWT_EXPIRATION_TIME="24h"
 
-HOST="https://daily-news-bd.vercel.app"
+HOST="mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com"
