news list add ui

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # data base ulr 
-DATABASE_URL="mysql://root:@localhost:3306/newsdailydb"
+DATABASE_URL="mysql://root:@localhost:3306/newsWorld"
 # DATABASE_URL="mysql://avnadmin:AVNS_7GxsPvFKBXJAVQ2rzs8@mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com:24058/defaultdb?ssl-mode=REQUIRED"
 
 USER_NAME=avnadmin
@@ -12,3 +12,5 @@ JWT_ISSUER="Localhost"
 JWT_EXPIRATION_TIME="24h"
 
 HOST="mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com"
+
+base_ulr=http://localhost:3000
