--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@prisma/client": "^5.9.0",
     "jose": "^5.2.0",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.4",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
