--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
 # data base ulr 
-DATABASE_URL="mysql://root:@localhost:3306/newsWorld"
-# DATABASE_URL="mysql://avnadmin:AVNS_7GxsPvFKBXJAVQ2rzs8@mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com:24058/defaultdb?ssl-mode=REQUIRED"
+# DATABASE_URL="mysql://root:@localhost:3306/newsWorld"
+
+DATABASE_URL="mysql://avnadmin:AVNS_7GxsPvFKBXJAVQ2rzs8@mysql-33bff73f-sunnysharif154-3633.a.aivencloud.com:24058/defaultdb?ssl-mode=REQUIRED"
 
 USER_NAME=avnadmin
 PASSWORD=AVNS_7GxsPvFKBXJAVQ2rzs8
